@@ -449,6 +449,9 @@ Library
   codecs.getincrementaldecoder() and codecs.getincrementalencoder() have
   been added.
 
+- SF patch #1359365: cStringIO.StringIO.isatty() will raise a ValueError
+  now if close() has been called before (like file and StringIO.StringIO do)
+
 - A regrtest option -w was added to re-run failed tests in verbose mode.
 
 - Patch #1446372: quit and exit can now be called from the interactive
